fixes wiki handling